unpackaged/main/default/objects/bt_stripe__Payment_Method__c/bt_stripe__Payment_Method__c.object-meta.xml
<CustomObject>
    <description>A Payment Method record stores information about Credit Cards, Debit Cards and ACH Bank Accounts that are also in your Payment Gateway system. The Payment Method data is PCI compliant because it stores a token instead of raw card or bank data. Payment Methods are related to a Payment Gateway Customer and can be used to create charge Transactions.</description>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>