unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Account_Holder_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Account_Holder_Type__c</fullName>
    <inlineHelpText>The type of entity that holds the account.</inlineHelpText>
    <label>Account Holder Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Personal Checking</fullName>
            </value>
            <value>
                <fullName>Business Checking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>