unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Account_Number__c</fullName>
    <inlineHelpText>The bank account number.</inlineHelpText>
    <label>Account Number</label>
    <length>75</length>
    <type>Text</type>
</CustomField>