unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__ACH_Key__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__ACH_Key__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Set to the ACH Routing Number + last 4 digits of the Account Number. Used to match existing ACH Payment Method records.</inlineHelpText>
    <label>ACH Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>