unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Bank_Account_Type__c</fullName>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Business Checking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>