unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Bank_Name__c</fullName>
    <description>The name of the bank associated with the routing number. Set automatically.</description>
    <inlineHelpText>The name of the bank associated with the routing number. Set automatically.</inlineHelpText>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>