unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Billing_City__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_City__c</fullName>
    <inlineHelpText>The billing city related to the card.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>