unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_Country__c</fullName>
    <inlineHelpText>The billing country related to the card. Enter the full name of the billing country.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>