unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_Email__c</fullName>
    <inlineHelpText>If your Gateway setting is turned on for auto-receipt emailing, this is the field that Gateway will look at to send the receipt.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>