unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_Postal_Code__c</fullName>
    <inlineHelpText>The billing postal code related to the card. Gateway provider validates addresses only if this setting is turned on (if provider supports).</inlineHelpText>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>