unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Billing_State__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_State__c</fullName>
    <inlineHelpText>The billing state related to the card. Enter two digit United States values or the full state name.</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>