unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_Street__c</fullName>
    <inlineHelpText>The billing street address related to the card.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>