unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Card_Expiration_Month__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Card_Expiration_Month__c</fullName>
    <inlineHelpText>The two digit value of the card&#39;s expiration month.</inlineHelpText>
    <label>Expiration Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>