unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Card_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Card_Id__c</fullName>
    <inlineHelpText>Unique Gateway-generated value. Think of this as the &#39;token&#39;.</inlineHelpText>
    <label>Payment Method ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>