unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Card_Last_4_Digit__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Card_Last_4_Digit__c</fullName>
    <inlineHelpText>This field auto-populates based on the card or bank account number.</inlineHelpText>
    <label>Last 4 Digits</label>
    <length>4</length>
    <type>Text</type>
</CustomField>