unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Company__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Company__c</fullName>
    <inlineHelpText>Company</inlineHelpText>
    <label>Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>