unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Connected_Account__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Connected_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Payment Method can be used for Payouts for a Connected Account.</description>
    <inlineHelpText>If this Payment Method can be used for Payouts for a Connected Account.</inlineHelpText>
    <label>Connected Account</label>
    <referenceTo>bt_stripe__Connected_Account__c</referenceTo>
    <relationshipLabel>External Accounts</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>