unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Contact__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Salesforce Contact related to this Payment Method.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>