unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Customer_Acceptance_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Customer_Acceptance_Type__c</fullName>
    <description>Indicates whether the mandate acceptance was performed online or offline.</description>
    <inlineHelpText>Indicates whether the mandate acceptance was performed online or offline.</inlineHelpText>
    <label>Customer Acceptance Type</label>
    <length>7</length>
    <type>Text</type>
</CustomField>