unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Customer_Id__c</fullName>
    <inlineHelpText>Unique Gateway-generated value. This ID can be used within the Gateway dashboard (if provided) to look up a customer.</inlineHelpText>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>