unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Error_Type__c</fullName>
    <inlineHelpText>Gateway error type. This field auto-populates if there is an error when inputting the related payment method details.</inlineHelpText>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>