unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Fingerprint__c</fullName>
    <inlineHelpText>Gateway unique identifier.</inlineHelpText>
    <label>Fingerprint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>