unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__IP_Address__c</fullName>
    <description>The IP address from which the mandate was accepted by the customer.</description>
    <inlineHelpText>The IP address from which the mandate was accepted by the customer.</inlineHelpText>
    <label>IP Address</label>
    <length>15</length>
    <type>Text</type>
</CustomField>