unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Lead__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Salesforce Lead related to this Payment Method.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>