unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Mandate_Accepted_At__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Mandate_Accepted_At__c</fullName>
    <description>The date/time that customer accepted mandate for ACH payment methods.</description>
    <inlineHelpText>The date/time that customer accepted mandate for ACH payment methods.</inlineHelpText>
    <label>Mandate Accepted At</label>
    <type>DateTime</type>
</CustomField>