unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Micro_Deposit_One__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Micro_Deposit_One__c</fullName>
    <description>Positive amount in cents. The value of one of the micro-deposits as given by your customer. It can take a few days for the micro-deposit to appear in the customer&#39;s bank account. For &quot;$0.32&quot;, enter 32. The order does not matter between the two fields.</description>
    <inlineHelpText>Positive amount in cents. The value of one of the micro-deposits as given by your customer. It can take a few days for the micro-deposit to appear in the customer&#39;s bank account. For &quot;$0.32&quot;, enter 32. The order does not matter between the two fields.</inlineHelpText>
    <label>Micro-Deposit One</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>