unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Payment Gateway is the Gateway account that this Payment Method is related to. All subsequent transactions related to this Payment Method will be run through this Gateway.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>