unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Payment_Method_Status__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Method_Status__c</fullName>
    <inlineHelpText>The current status of the Payment Method. Set automatically.</inlineHelpText>
    <label>Payment Method Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Verification Failed</fullName>
            </value>
            <value>
                <fullName>Errored</fullName>
            </value>
            <value>
                <fullName>Deleted from Payment Gateway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>