unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__POS_Device_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__POS_Device_Id__c</fullName>
    <inlineHelpText>POS Device Id of a mobile reader</inlineHelpText>
    <label>POS Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>