unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Postal_Code_Check__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Postal_Code_Check__c</fullName>
    <inlineHelpText>If a postal code was provided, displays the result of the check.</inlineHelpText>
    <label>Postal Code Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unchecked</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>