unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Read_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Read_Method__c</fullName>
    <inlineHelpText>Read method of the card when using a mobile card reader.</inlineHelpText>
    <label>Read Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>