unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Reader_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Reader_Id__c</fullName>
    <inlineHelpText>Reader Id if Payment Method was captured with a mobile reader</inlineHelpText>
    <label>Reader Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>