unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Remove_from_Stripe__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Remove_from_Stripe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked the payment method is deleted from stripe.</inlineHelpText>
    <label>Remove From Gateway</label>
    <type>Checkbox</type>
</CustomField>