unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Response_Message__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Response_Message__c</fullName>
    <label>Response Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>