unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Routing_Number__c</fullName>
    <inlineHelpText>The routing transit number for the bank account.</inlineHelpText>
    <label>Routing Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>