unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Send_to_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Send_to_Gateway__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Payment Methods will process through the Payment Gateway unless this box is checked.</description>
    <inlineHelpText>Payment Methods will process through the Payment Gateway unless this box is checked.</inlineHelpText>
    <label>Send to Gateway</label>
    <type>Checkbox</type>
</CustomField>