unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Stripe_Customer__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Gateway Customer is the Card Holder or ACH name as stored on the Gateway back-end</inlineHelpText>
    <label>Payment Gateway Customer</label>
    <referenceTo>bt_stripe__Stripe_Customer__c</referenceTo>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>