unpackaged/main/default/objects/bt_stripe__Payment_Method__c/fields/bt_stripe__Stripe_Token__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Token__c</fullName>
    <description>Payment method token returned from Gateway.</description>
    <inlineHelpText>Payment method token returned from Gateway.</inlineHelpText>
    <label>Stripe Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>